--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "main": "src/index.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axiom": "0.1.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "2.1.8"
