--- a/src/config.json
+++ b/src/config.json
@@ -39,7 +39,7 @@
       "suffix": " 🏗️"
     },
     {
-      "text": "Number Of Peers",
+      "text": "Number Of Peers Connected",
       "suffix": " 👥"
     },
     {
