--- a/src/config.json
+++ b/src/config.json
@@ -1,27 +1,27 @@
 {
-  "appTitle": "Celestia Light Node Health Checker",
+  "appTitle": "Celestia Node Health Checker",
   "backend": {
     "apiFailureMessage": "Unable to reach the node"
   },
   "missingValuesMessage": "Please fill in all the required fields.",
   "fields": [
     {
-      "label": "Light Node IP",
+      "label": "Node IP",
       "type": "text",
       "icon": "fa-server",
-      "hoverText": "Enter the IP address of the light node"
+      "hoverText": "Enter the IP address of the node"
     },
     {
       "label": "RPC Port",
       "type": "number",
       "icon": "fa-plug",
-      "hoverText": "Enter the RPC port number for the light node"
+      "hoverText": "Enter the RPC port number for the node"
     },
     {
       "label": "Read Auth Token",
       "type": "text",
       "icon": "fa-key",
-      "hoverText": "Enter the read authorization token for the light node"
+      "hoverText": "Enter the read authorization token for the node"
     }
   ],
   "resultRowTitle": "Health Results",
