ONCALL-129 chore: update package versions

--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
-    "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.5",
-    "webpack-dev-server": "^5.2.1"
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
   },
   "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
